--- a/Chat.Web/Web.config
+++ b/Chat.Web/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=meinwegnachdeutschland2016.database.windows.net;Initial Catalog=meinwegnachdeutschland2016;User ID=meinwegnachdeutschland2016;Password=Zxcv@123123" providerName="System.Data.SqlClient" />
-    <add name="Entities" connectionString="metadata=res://*/AFModel.DeContext.csdl|res://*/AFModel.DeContext.ssdl|res://*/AFModel.DeContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=meinwegnachdeutschland2016.database.windows.net;Initial Catalog=meinwegnachdeutschland2016;User ID=meinwegnachdeutschland2016;Password=Zxcv@123123;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=meinwegnachdeutschland2016;User ID=meinwegnachdeutschland2016;Password=Zxcv@123123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
